--- a/src/client/App.css
+++ b/src/client/App.css
@@ -15,6 +15,15 @@
   height: 150px;
   padding: 20px;
   color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+
 }
 
 .App-title {
